--- a/css/styles.css
+++ b/css/styles.css
@@ -795,7 +795,7 @@ nav {
 .modal-dialog .modal-content {
   -webkit-box-shadow: none;
   box-shadow: none;
-  margin-top: 220px;
+  /* margin-top: 220px; */
   margin-left: auto;
   margin-right: auto;
 }
@@ -2301,6 +2301,20 @@ transition: opacity 1s ease;
   margin:1rem;
   font-weight:bold;
 }
+
+.collapse-carousel .carousel-indicators {
+
+      position: relative;
+    top: auto;
+    bottom: auto;
+    margin-top: 1rem;
+}
+
+.collapse-carousel .carousel-indicators .active {
+  background: none;
+}
+
+.fotorama__stage {background:#000;}
 
 @media screen and (max-width: 769px) {
  .modal-bg {
