--- a/css/styles.css
+++ b/css/styles.css
@@ -2293,13 +2293,16 @@ transition: opacity 1s ease;
 
 .modal-callyou #fail {
   color: red;
-  margin:1rem
+  margin:1rem;
+  font-weight:bold;
+  text-align:center;  
 }
 
 .modal-callyou #valid {
   color: green;
   margin:1rem;
   font-weight:bold;
+  text-align:center;
 }
 
 .collapse-carousel .carousel-indicators {
