--- a/css/styles.css
+++ b/css/styles.css
@@ -691,6 +691,7 @@ nav {
   font-family: 'PFRegalDisplayPro-Reg';
   font-size: 1.5rem;	
   margin-top:0.5rem;
+  text-align: center;
 }
 
 .catalog-button {
