--- a/css/styles_rus.css
+++ b/css/styles_rus.css
@@ -788,7 +788,7 @@ nav {
 }
 
 .modal-bg {
-  background-image: url("/media/couture/img/img-togas-lp3/form.png");
+  background-image: url("https://media.togas.com/media/couture/img/img-togas-lp3/form_rus.png?v=1");
 }
 
 .modal-content {
