--- a/css/styles_rus.css
+++ b/css/styles_rus.css
@@ -1021,6 +1021,12 @@ p {
   color: #B49256;
   margin: 1rem;
 }
+@media screen and (max-height: 630px) {
+  .navbar .navbar-nav {
+	font-size: 0.8rem;
+	line-height: 0.8rem;
+   }
+}
 
 @media screen and (max-width: 1140px) {
   .wrapper {
