--- a/css/styles.css
+++ b/css/styles.css
@@ -676,9 +676,10 @@ nav {
 }
 .txt-catalog {
   font-family: 'PFRegalDisplayPro-Reg';
-  font-size: 1.5rem;	
+  font-size: 2.1rem;	
   margin-top:0.5rem;
   text-align: center;
+  font-color:#000;
 }
 
 .catalog-button {
