--- a/css/styles.css
+++ b/css/styles.css
@@ -679,7 +679,7 @@ nav {
   font-size: 2.1rem;	
   margin-top:0.5rem;
   text-align: center;
-  font-color:#000;
+  color:#000;
 }
 
 .catalog-button {
